--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://catrieldb:1234@cluster0.2dua7.mongodb.net/myTinerary?retryWrites=true&w=majority
+SECRET_KEY=secret_key12345
