--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/catrielit/mytinerary-cirulli#readme",
   "dependencies": {
+    "@mui/icons-material": "^5.2.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
